; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_main.c_sqlite3_collation_needed.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_main.c_sqlite3_collation_needed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { void (i8*, %struct.TYPE_6__*, i32, i8*)*, i32, i8*, i64 }

@SQLITE_OK = common dso_local global i32 0, align 4
@SQLITE_MISUSE_BKPT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3_collation_needed(%struct.TYPE_6__* %0, i8* %1, void (i8*, %struct.TYPE_6__*, i32, i8*)* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca void (i8*, %struct.TYPE_6__*, i32, i8*)*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i8* %1, i8** %5, align 8
  store void (i8*, %struct.TYPE_6__*, i32, i8*)* %2, void (i8*, %struct.TYPE_6__*, i32, i8*)** %6, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @sqlite3_mutex_enter(i32 %9)
  %11 = load void (i8*, %struct.TYPE_6__*, i32, i8*)*, void (i8*, %struct.TYPE_6__*, i32, i8*)** %6, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  store void (i8*, %struct.TYPE_6__*, i32, i8*)* %11, void (i8*, %struct.TYPE_6__*, i32, i8*)** %13, align 8
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 3
  store i64 0, i64* %15, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 2
  store i8* %16, i8** %18, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @sqlite3_mutex_leave(i32 %21)
  %23 = load i32, i32* @SQLITE_OK, align 4
  ret i32 %23
}

declare dso_local i32 @sqlite3_mutex_enter(i32) #1

declare dso_local i32 @sqlite3_mutex_leave(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
